--- a/style.css
+++ b/style.css
@@ -1,460 +1,163 @@
-  body {
-  font-family: 'gg sans SemiBold', sans-serif;
-  background-color: #3b3b3b;
-  color: white;
-  margin: 0;
-  padding: 0;
-  position: flex;
-  min-width: 500px;
-  height: auto;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.profile-container {
-  max-width: 400px;
-  height: 1000px;
-  margin: auto;
-  background-color: #2b2d31;
-  padding: 20px;
-  border-radius: 30px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  /* max-height: 800px; */
-  align-items: center;
+body {
+    font-family: 'gg sans SemiBold', sans-serif;
+    background-color: #3b3b3b;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    height: 100%;
 }
 
-.profile-header {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  position: relative;
-  margin: 0;
-  z-index: 20;
-  margin: 0;
-  background-color: #0248d3;
-  border-radius: 20px;
-  padding: 1rem;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.top-bar {
-  top: 0;
-  justify-content: space-between;
-  position: absolute;
-  /* left: 0; */
-}
-
-.top-icons {
-  display: flex;
-  flex-direction: row;
-}
-
-.avatar-wrapper {
-  position: relative;
-  margin-left: 0.5vh;
-  margin-top: 5vh;
-}
-
-.profile-header .avatar {
-
-  aspect-ratio: 1 / 1;
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
-  display: block;
-  margin-left: 1rem;
-}
-
-.status-indicator.green {
-  width: 16px;
-  height: 16px;
-  background-color: #43b581;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  border: 2px solid #2b2d31;
-}
-
-.username {
-    width: 100%;
-}
-
-.top-bar {
-    /* padding: 15px; */
-    min-height: 1px;
+.container {
     width: 400px;
-    height: 25px;
-    display: flex;
-    justify-content: flex-end;
+    height: 150vh;
+    margin: auto;
+    display: block;
+    border-radius: 30px;
 }
 
-/* .top-bar .top-icon {
-  max-width: 1vh;
-  max-height: 1vh;
-  object-fit: contain;    
-} */
-.top-icons {
-  margin-top: 25px;
-  display: fixed;
-  gap: 10px;
-  z-index: 2000;
-
-}
-
-.icon {
-  width: 24px;
-  height: 24px;
-  filter: brightness(0) invert(1);
-  cursor: pointer;
-  margin: 10px;
-}
-
-.editdiv {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-  margin-top: 2vh;
-}
-
-.editdiv1 {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-  margin-top: 0.5vh;
-  background: #2b2d31;
-}
-
-.switch-account {
-  background-color: #131313;
-  color: white;
-  border: none;
-  padding: 12px 20px;
-  width: 100%;
-  border-radius: 25px;
-  font-family: 'gg sans SemiBold', sans-serif;
-  cursor: pointer;
-  text-align: center;
-}
-
-.edit-profile {
-  background-color: #1c5de0;
-  color: white;
-  border: none;
-  padding: 12px 20px;
-  width: 100%;
-  border-radius: 25px;
-  font-family: 'gg sans SemiBold', sans-serif;
-  cursor: pointer;
-  text-align: center;
-}
-
-.promo-box {
-  width: 100%;
-  background-color: #1e1f22;
-  border-radius: 12px;
-  padding: 16px;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.promo-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  font-size: 14px;
-  font-weight: bold;
-  color: #ffffff;
-  margin-bottom: 4px;
-}
-
-.promo-div {
-  display: flex;
-  gap: 10px;
-}
-
-.promo-button {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #313338;
-  color: white;
-  border: none;
-  padding: 12px;
-  border-radius: 20px;
-  font-weight: 500;
-  gap: 8px;
-  font-size: 14px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
-.promo-button:hover {
-  background-color: #383a40;
-}
-
-.promo-title p:first-child {
-  margin-top: -2px;
-}
-
-.promo-title p:last-child {
-  cursor: pointer;
-  font-weight: normal;
-  color: #b0b0b0;
-  font-size: 13px;
-  margin-top: -2px;
-}
-
-.promo-logo {
-  height: 16px;
-  width: 16px;
-}
-
-.promo-button img {
-  filter: brightness(0) invert(1);
-}
-
-
-.voice-channel {
+.content-container {
     width: 100%;
-    border-radius: 20px;
-    background-color: #2dc653;
+    height: 100%;
+    background-color: #2b2d31;
+    display: flex;
+}
+
+/* ==========SERVER LIST========== */
+
+.server-list {
+    width: 100%;
+    height: 100%;
+    flex: 1;
+    padding: 0.75rem;
+    background-color: black;
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
-    padding-left: 15px;
+    align-items: center;
 }
 
-.join-voice {
-  margin-left: auto;
-  background-color: #3e4147;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin-bottom: 10px;
-  border-radius: 5px;
+.server-logo {
+    border-radius: 10px;
 }
 
-.spotify-bottom-box {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #1e1f22;
-  border-radius: 10px;
-  padding: 10px;
-  margin-top: auto;
-  margin-top: 20px;
-  color: white;
+.server-logo img {
+    max-width: 64px;
+    min-width: 64px;
 }
 
-.spotify-label {
-  margin: 0 0 8px 0;
-  font-size: 12px;
-  color: #ffffff;
-}
+/* ==========MESSAGE LIST========== */
 
-.spotify-content {
-  display: flex;
-  align-items: center;
-}
-
-.song-image {
-  width: 50px;
-  height: 50px;
-  border-radius: 5px;
-  margin-right: 15px;
-  object-fit: cover;
-}
-
-.song-info {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-.song-info strong {
-  font-size: 14px;
-  margin-bottom: 2px;
-}
-
-.song-info p {
-  font-size: 12px;
-  margin: 0;
-  color: #f0f0f0;
-}
-
-.progress-bar {
-  background-color: #3e3e3e;
-  height: 4px;
-  width: 100%;
-  border-radius: 2px;
-  margin-top: 5px;
-  overflow: hidden;
-}
-
-.progress {
-  background-color: #ffffff;
-  height: 100%;
-  width: 0%;
-}
-
-.timestamps {
-  display: flex;
-  justify-content: space-between;
-  font-size: 10px;
-  color: #d1d1d1;
-  margin-top: 2px;
-}
-
-.spotify {
+.dm-container  {
     width: 100%;
+    height: 100%;
+    flex: 5;
+    background-color: #2b2d31;
     display: flex;
     flex-direction: column;
 }
 
-.add-status {
-  font-family: 'gg sans SemiBold', sans-serif;
-  margin-left: 200px;
-  margin-top: 20px;
-  background-color: #3e4147;
-  color: white;
-  border: none;
-  padding: 6px 10px;
-  border-radius: 5px;
+.header {
+    flex: 1;
+    padding: 0.5rem;
+    position: sticky;
 }
 
-.username {
-  margin-left: 2vh;
-  margin-top: 3.8vh;
-  padding-bottom: 1vh;
+.header h1 {
+    font-size: 24px;
 }
 
-.username h2 {
-  margin: 0;
+.person-list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.voice-box {
-  width: 100%;
-  background-color: #1e1f22;
-  border-radius: 12px;
-  padding: 15px;
-  margin-top: 20px;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+.person-list a{
+    all: unset;
+    color: white;
+    cursor: pointer;
+    display: flex;
 }
 
-.voice-label {
-  margin: 0;
-  font-size: 12px;
-  color: #d1d1d1;
+.person {
+    height: 64px;
+    width: 100%;
+    padding: 0.5rem;
+    background-color: #1e1f22;
+    display: flex;
+    align-items: center;
+
 }
 
-.voice-content {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+
+.person-pp {
+    width: 64px;
+    height: 100%;
+    border-radius: 10px;
 }
 
-.voice-avatars {
-  display: flex;
-  align-items: center;
-  position: relative;
+.person-pp img {
+    max-width: 48px;
+    min-width: 48px;
 }
 
-.voice-avatars img {
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
-  margin-right: 4px;
-  border: 2px solid #2b2d31;
+.person-name {
+    width: 100%;
 }
 
-.extra-users {
-  font-size: 10px;
-  color: white;
-  background-color: #2b2d31;
-  border-radius: 50%;
-  padding: 4px 6px;
-  margin-left: 4px;
+/* ==========BOTTOM NAVIGATION========== */
+
+nav {
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    background-color: black;
+    width: 100%;
+    height: 60px;
 }
 
-.voice-info {
-  display: flex;
-  flex-direction: column;
+nav .nav-item {
+    background-color: #1e1f22;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    color: white;
+    font-size: 12px;
+    opacity: 50%;
 }
 
-.room-name {
-  display: flex;
-  align-items: center;
-  gap: 6px;
+nav .nav-item-highlight {
+    background-color: #1e1f22;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    color: white;
+    font-size: 12px;
+    opacity: 100%;
 }
 
-.voice-icon {
-  width: 16px;
-  height: 16px;
-  color: white;
-  filter: brightness(0) invert(1);
+.nav-item a{
+    all: unset;
+    color: white;
+    cursor: pointer;
 }
 
-.room-desc {
-  font-size: 11px;
-  color: #b0b0b0;
-  margin: 0;
-}
-
-.join-voice {
-  background-color: #2dc653;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  padding: 10px;
-  width: 100%;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-/* bottom nav */
-.bottom-nav {
-  width: 100%; 
-  background-color: #1e1f22;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 12px 0;
-  border-top: 1px solid #2b2d31;
-  border-radius: 20px;
-  margin-top: 16px;
-}
-
-.nav-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  color: white;
-  font-size: 12px;
-  opacity: 50%;
-}
-
-.nav-item span a {
-  all: unset;
-  color: white;
-  cursor: pointer;
-}
-
-.nav-item-profile {
-  opacity: 100%;
+.nav-item p {
+    text-align: center;
 }
 
 .nav-icon {
@@ -470,7 +173,6 @@
   object-fit: cover;
 }
 
-
 .status-indicator.green {
   width: 10px;
   height: 10px;
@@ -481,82 +183,3 @@
   right: 0;
   border: 2px solid #1e1f22;
 }
-
-.badge {
-  position: absolute;
-  top: -5px;
-  right: -10px;
-  background-color: red;
-  color: white;
-  font-size: 10px;
-  padding: 2px 6px;
-  border-radius: 20px;
-  font-weight: bold;
-}
-
-.profile-wrapper {
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
-
-.bottom-avatar {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-
-#acc-option {
-  z-index: 99999;
-  position: absolute;
-  background-color: #1e1f22;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  overflow: hidden;
-  transition: max-height 0.3s ease;
-  max-height: 0;
-  margin: 10px;
-  border-radius: 20px;
-  gap: 20px;
-  top: 0px;
- 
-  
-}
-
-#acc-option.show {
-  max-height: 800px;
-
-}
-
-#acc-option .acc1 {
-  display: flex;
-  margin-left: 20px;
-  margin-top: 1vh;
-  background-color: #3c3e42;
-  left: 0px;
-  right: 0px;
-  
-}
-#acc-option .acc2 {
-  display: flex;
-  margin-top: 1vh;
-  margin-left: 20px;
-}
-#acc-option .acc3 {
-  display: flex;
-  margin-top: 1vh;
-  margin-left: 20px;
-}
-
-#acc-option .img1 {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-  display: flex;
-  
-}
-
-
